<resources>
    <string name="app_name">ProductDiscount</string>
    <string name="btn_select_product">Select product</string>
    <string name="txtvProductFilled">Code: %1$s\n\n%2$s\n\nDescription: %3$s\n\nPrice: %4$.2f€</string>
    <string name="txtvDiscount">Final price with the discount: %1$.2f€</string>
    <string name="etxtDiscountHint">Discount percent</string>
    <string name="btn_calculate">Get discount</string>
    <string name="product_selection_title">Product selection</string>
    <string name="btn_search">Search</string>
    <string name="etxt_product_code_hint">Enter the ID</string>
    <string name="etxt_product_name_hint">Enter the name</string>
    <string name="etxt_product_desc_hint">Enter the description</string>
    <string name="etxt_product_price_hint">Enter the price</string>
    <string name="btn_ok">Okay</string>
    <string name="btn_cancel">Cancel</string>
    <string name="product_selected">Product selected</string>
    <string name="invalid_percent">Invalid discount</string>
    <string name="empty_code">Please enter the id</string>
    <string name="product_not_found">Product not found</string>
</resources>