<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductSelection">

    <ImageView style="@style/activity_background" />

    <LinearLayout style="@style/activity_style"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView style="@style/txtv_style.title"
            android:text="@string/product_selection_title" />

        <LinearLayout style="@style/container"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText style="@style/etxt_style"
                android:id="@+id/etxtCode"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_weight="3"
                android:hint="@string/etxt_product_code_hint" />

            <Button style="@style/btn_style"
                android:id="@+id/btnSearch"
                android:layout_weight="7"
                android:text="@string/btn_search" />
        </LinearLayout>

        <EditText style="@style/etxt_style"
            android:id="@+id/etxtName"
            android:enabled="false"
            android:maxLines="1"
            android:hint="@string/etxt_product_name_hint" />

        <EditText style="@style/etxt_style"
            android:id="@+id/etxtDesc"
            android:enabled="false"
            android:hint="@string/etxt_product_desc_hint" />

        <EditText style="@style/etxt_style"
            android:id="@+id/etxtPrice"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:hint="@string/etxt_product_price_hint" />
    </LinearLayout>

    <LinearLayout style="@style/container"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_margin="@dimen/normal_margin">

        <Button style="@style/btn_style"
            android:id="@+id/btnOk"
            android:layout_weight="1"
            android:text="@string/btn_ok"
            android:enabled="false"
            android:layout_marginEnd="@dimen/normal_margin"/>

        <Button style="@style/btn_style"
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

    </LinearLayout>
</RelativeLayout>